add fancy scroll picker

--- a/demo/src/main/res/layout/time_picker_custom.xml
+++ b/demo/src/main/res/layout/time_picker_custom.xml
@@ -45,6 +45,16 @@
         <antistatic.spinnerwheel.ScrollPickerView
             android:id="@+id/scrollPicker"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:maxValue="12"
+            app:minValue="1"
+            app:pickerBackground="#fcfcfc"
+            app:pickerTextColor="#444"
+            app:pickerTitle="Child Age"
+            app:pickerTitleBackground="#FAFAFA"
+            app:pickerTitleTextColor="#333"
+            app:pickerTitleTextSize="15dp"
+            app:value="1"
+            app:visibleItemsCount="3" />
     </LinearLayout>
 </RelativeLayout>
